core/src/snapshots/bitcat_core__ai_connection__tests__request_and_result_contract-2.snap
---
source: core/src/ai_connection.rs
expression: "ConnectionCheck::local(ConnectionStatus::MissingKey)"
---
status: missing_key
elapsed_ms: 0
