core/src/snapshots/bitcat_core__ai_connection__tests__request_and_result_contract.snap
---
source: core/src/ai_connection.rs
expression: "request_body(\"test-model\")"
---
max_tokens: 8
messages:
  - content: Reply OK.
    role: user
model: test-model
stream: false
